@@ -1,3 +1,8 @@
+2003-04-03  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* magick/utility.c: Simplified skipping over the "*" in
+	the +profile "*" option when expanding filenames.
+
 2003-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac (GSVersion): Added test to obtain version
